--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "ignore-walk": "^3.0.4",
     "inherits": "^2.0.4",
     "ini": "^1.3.8",
-    "is-fullwidth-code-point": "^1.0.0",
-    "jsdoc": "^3.6.7",
+    "is-fullwidth-code-point": "^1.0.0",    
     "mimic-response": "^2.1.0",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.5",
@@ -42,6 +41,7 @@
     "needle": "^2.6.0",
     "node": "^16.10.0",
     "nopt": "^4.0.3",
+    "npm": "^8.3.2",
     "npm-bundled": "^1.1.2",
     "npm-normalize-package-bin": "^1.0.1",
     "npm-packlist": "^1.4.8",
@@ -52,7 +52,7 @@
     "os-tmpdir": "^1.0.2",
     "osenv": "^0.1.5",
     "path-is-absolute": "^1.0.1",
-    "rc": "^1.2.8",
+    "rc": "^1.2.8",    
     "safe-buffer": "^5.1.2",
     "safer-buffer": "^2.1.2",
     "sax": "^1.2.4",
@@ -66,7 +66,9 @@
     "strip-json-comments": "^2.0.1"
   },
   "devDependencies": {
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "jsdoc": "<=3.2.2",
+    "rollup": "^2.66.0"
   },
   "scripts": {
     "test": "mocha unit_test"
