--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "detect-libc": "^1.0.3",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
+    "flatted": "^3.2.5",
     "fs.realpath": "^1.0.0",
     "has-unicode": "^2.0.1",
     "iconv-lite": "^0.4.24",
@@ -66,8 +67,8 @@
     "strip-json-comments": "^2.0.1"
   },
   "devDependencies": {
-    "mocha": "^9.1.3",
     "jsdoc": "<=3.2.2",
+    "mocha": "^9.1.3",
     "rollup": "^2.66.0"
   },
   "scripts": {
