--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
     "flatted": "^3.2.5",
+    "fs": "^0.0.1-security",
     "fs.realpath": "^1.0.0",
     "has-unicode": "^2.0.1",
     "iconv-lite": "^0.4.24",
