--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cacatoo",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Building, exploring, and sharing spatially structured models",
   "main": "dist/cacatoo.js",
   "directories": {
@@ -14,10 +14,6 @@
     "aproba": "^1.2.0",
     "balanced-match": "^1.0.2",
     "brace-expansion": "^1.1.11",
-<<<<<<< HEAD
-=======
-    "cacatoo": "^1.0.1",
->>>>>>> checkpoints
     "chai": "^4.3.4",
     "chownr": "^1.1.4",
     "code-point-at": "^1.1.0",
@@ -38,6 +34,7 @@
     "inherits": "^2.0.4",
     "ini": "^1.3.8",
     "is-fullwidth-code-point": "^1.0.0",
+    "jsdocs": "^1.0.0",
     "mimic-response": "^2.1.0",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.5",
