--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aproba": "^1.2.0",
     "balanced-match": "^1.0.2",
     "brace-expansion": "^1.1.11",
+    "cacatoo": "^1.1.2",
     "chai": "^4.3.4",
     "chownr": "^1.1.4",
     "code-point-at": "^1.1.0",
@@ -23,8 +24,9 @@
     "decompress-response": "^4.2.1",
     "deep-extend": "^0.6.0",
     "detect-libc": "^1.0.3",
-    "esdoc": "^1.1.0",
+    "esdoc": "^0.0.2",
     "esdoc-standard-plugin": "^1.0.0",
+    "fast-random": "^2.0.4",
     "flatted": "^3.2.5",
     "fs": "^0.0.1-security",
     "fs.realpath": "^1.0.0",
@@ -34,7 +36,7 @@
     "inherits": "^2.0.4",
     "ini": "^1.3.8",
     "is-fullwidth-code-point": "^1.0.0",
-    "jsdocs": "^1.0.0",
+    "jsdocs": "^0.0.1",
     "mimic-response": "^2.1.0",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.5",
