--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ini": "^1.3.8",
     "is-fullwidth-code-point": "^1.0.0",
     "jsdocs": "^0.0.1",
+    "mersennetwister": "^0.2.3",
     "mimic-response": "^2.1.0",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.5",
