--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "sinon": "^12.0.1",
     "string-width": "^1.0.2",
     "strip-ansi": "^3.0.1",
-    "strip-json-comments": "^2.0.1"
+    "strip-json-comments": "^2.0.1",
+    "yargs": "^18.0.0"
   },
   "devDependencies": {
     "jsdoc": "<=3.2.2",
